# GameEngine

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt  Visualizer.natvis  index.html  search.html
Core/: CMakeLists.txt
Core/DataContainer/Algorithm/: SortComparators.h  (+7 more)
Core/Error/: ErrorCodes.c  ErrorCodes.h  ErrorHandling.c  ErrorHandling.h  ReturnCodes.c  ReturnCodes.h
Core/Test/: CMakeLists.txt
CoreC/: CMakeLists.txt  Constants.h
CoreC/Clock/: Clock.c  Clock.h
CoreC/DataStructures/: GenericArray.c  GenericArray.h  GenericArrayNameMacros.h
CoreC/ErrorHandling/: ErrorHandling.c  Errorhandling.h  ReturnCodes.h
CoreC/Include/: CoreV2.h
CoreC/Log/: Log.c  Log.h  LogFormatting.c  LogFormatting.h
CoreCRunner/: CMakeLists.txt  Main.c
Core_C/: CMakeLists.txt  Constants.h  Functional.c
Core_C/Algorithm/: Sort.c  Sort.h  Sort_alg.h
Core_C/AppEvent/: AppEvent.c  AppEvent.h
Core_C/Asset/: AssetPaths.c  AssetPaths.h  AssetPaths_def.h
Core_C/Clock/: Clock.c  Clock.h
Core_C/DataStructures/: ARRAY.c  ARRAY.h  ARRAY_def.h  HASHMAP.c  HASHMAP.h  HASHMAP_def.h  STRING.c  STRING.h  STRING_def.h
Core_C/Error/: ErrorHandler.c  ErrorHandler.h
Core_C/Functional/: Compare.c  Compare.h  Hash.c  Hash.h
Core_C/Log/: Log.c  Log.h  LogFormatting.c  LogFormatting.h  Log_def.h
Core_C/Memory/: AllocationDebug.c  AllocationDebug.h  PoolAllocator.c  PoolAllocator.h  PoolAllocator_def.h
Core_C/_source/: Functional.c
Core_cpp/: CMakeLists.txt  Constants.hpp
Core_cpp/AppEvent/: AppEvent.cpp  AppEvent.hpp
Core_cpp/Clock/: Clock.cpp  Clock.hpp
Core_cpp/DataStructures/: GenericArray.cpp  GenericArray.hpp
Core_cpp/Include/: PlatformInclude.hpp
Core_cpp/Log/: Log.cpp  Log.hpp  LogFormatting.cpp  LogFormatting.hpp
Core_cpp/Window/: WindowV2.cpp  WindowV2.hpp
Core_cpp_test/: CMakeLists.txt  MainTest.cpp
Documentation/: CMakeLists.txt
Documentation/src/: DocumentationGeneration.cpp  DocumentationGeneration.h  DocumentationTest.cpp  DocumentationTest.h
ECS_C/: CMakeLists.txt  Component_def.h  ECS.c  ECS.h  ECSGlobalEvents_def.h  ECS_def.h  EntityFilter.h  EntityFilter_def.h  Entity_def.h
ExternalDependencies/STB_IMAGE/: CMakeLists.txt
GameEngine/: CMakeLists.txt  GameEngine.h  GameEngineApplication.c  GameEngineApplication.cpp  GameEngineApplication.h  GameEngineApplicationConfiguration.h  GameEngineApplicationInterface.c  GameEngineApplicationInterface.cpp  GameEngineApplicationInterface.h
GameEngine/Common/: CMakeLists.txt
GameEngine/ECS/: Component.cpp  Component.h  ComponentMacros.h  ComponentT.h  ComponentT.hpp  ComponentType.h  ECS.cpp  ECS.h  ECSEventQueue.cpp  ECSEventQueue.h  ECSEventQueueT.hpp  Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  EntityFilter.cpp  EntityFilter.hpp  EntityFilterT.hpp  EntityT.hpp  System.cpp  System.h
GameEngine/Editor/: GameEngineEditor.c  GameEngineEditor.cpp  GameEngineEditor.h
GameEngine/EngineSequencers/: EngineSequencers.cpp  EngineSequencers.h  UpdateSequencer.cpp  UpdateSequencer.h
GameEngine/GameLoop/: GameLoop.c  GameLoop.cpp  GameLoop.h
GameEngine/Input/: Input.c  Input.cpp  Input.h  InputGlobalEvent.cpp  InputGlobalEvent.h  InputGlobalEvent.hpp  InputGlobalEvents.cpp  InputGlobalEvents.hpp  InputV2.h
GameEngine/Log/: Log.cpp  Log.h  LogFormatters.h
GameEngine/Physics/: CMakeLists.txt  Physics.c  Physics.cpp  Physics.h  PhysicsInterface.c  PhysicsInterface.cpp  PhysicsInterface.h
GameEngine/Render/: CMakeLists.txt  Render.cpp  Render.h  RenderHook.cpp  RenderHook.h  RenderInterface.cpp  RenderInterface.h  ValidationLayers.cpp  ValidationLayers.h  Window.cpp  Window.h
GameEngine_Editor/: CMakeLists.txt  GameEngineDrawTest.h  GameEngineEditor.cpp  GameEngineEditor.h
GameEngine_Editor/DebugConsole/: DebugCommandParser.cpp  DebugCommandParser.h  DebugConsole.cpp  DebugConsole.h
GameEngine_Editor/EditWindows/: TransformWindow.cpp  TransformWindow.h
GameEngine_Editor/Gizmo/: GizmoDrawStep.cpp  GizmoDrawStep.h
GameEngine_Editor/IMGuiRender/: DrawableWindow.h  IMGuiRender.cpp  IMGuiRender.h
Math/: CMakeLists.txt  Math.hpp
Math/Matrix/: Matrix.hpp
Math/Quaternion/: Quaternion.cpp  Quaternion.h  Quaternion.hpp
Math/Vector/: Vector.cpp  Vector.h  Vector.hpp
Math/v2/: Math.cpp  Math.h  Math.hpp
Render/: CMakeLists.txt  RenderV2.c  RenderV2.cpp  RenderV2.h  RenderV2.hpp  RenderV2Interface.c  RenderV2Interface.cpp  RenderV2Interface.h  RenderV2Interface.hpp
Render/Cull/: BackfaceCulling.cpp  BackfaceCulling.h  BackfaceCulling.hpp  Cull.c  ObjectCulling.cpp  ObjectCulling.h  ObjectCulling.hpp
Render/Depth/: DepthBuffer.c  DepthBuffer.h  DepthBuffer_def.h
Render/File/: ObjReader.c  ObjReader.cpp  ObjReader.h  ObjReader.hpp  TextureReader.c  TextureReader.h
Render/Heap/: RenderHeap.c  RenderHeap.h  RenderHeap_def.h
Render/Light/: Light_def.h
Render/Metrics/: RenderTimeMetrics.c  RenderTimeMetrics.h  RenderTimeMetrics_def.h
Render/Objects/: Mesh.hpp  RenderedObject.c  RenderedObject.h  RenderedObject.hpp  RenderedObject_def.h  Vertex.cpp  Vertex.hpp
Render/Raster/: Rasterizer.c  Rasterizer.cpp  Rasterizer.h  Rasterizer.hpp  Rasterizer_def.h
Render_Asset/: CMakeLists.txt
Render_Asset/Texture/: TextureAsset_def.h
SandboxApplication/: CMakeLists.txt  SandboxApplication.cpp  SandboxApplication.h
Test/: CMakeLists.txt  main.cpp
Test/Lib/: Assertion.h  EntityConfigurations.c  EntityConfigurations.cpp  EntityConfigurations.h  EntityCreation.c  EntityCreation.cpp  EntityCreation.h  IntegrationTest.c  IntegrationTest.cpp  IntegrationTest.h
Test/src/: CameraMatricesTest.cpp  CustomAllocatorTest.c  ECSTest.cpp  EntitySelectionTest.c  EntitySelectionTest.cpp  GizmoTest.c  MathTest.c  MathTest.cpp  MyRenderTest.c  MyRenderTest.cpp  OpenCLTest.c  OpenCLTest.cl  PhysicsRaycastTest.c  PhysicsRaycastTest.cpp  RasterTest.c  Release_004.c  SoftwareRendererShowcase_icosphere.c  SoftwareRendererShowcase_tower.c  TextureLoadTest.c  TransformTest.cpp  TransformTest.h
Tools/PNGSerializer/: CMakeLists.txt  PNGSerializer.c
(+788 files in other folders)
